--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
     display: block;
     margin: auto;
     width: 100%;
-    max-width: 500px;
+    max-width: 460px;
     height: auto;
 }
 #show-clicked {
@@ -61,4 +61,16 @@ body {
     color: white;
     font-size: 110%;
     visibility: hidden;
+}
+.about-item {
+    text-align: center;
+    background-color: #C4C4C4;
+    width: 50%;
+    margin: 0 auto;
+}
+a, a:visited {
+    color: black;
+}
+a:hover {
+    font-weight: bold;
 }
